version/0.5/_sources/api/_autosummary/ansys.meshing.prime.SurfaceUtilities.rst.txt
.. vale off

SurfaceUtilities
================

.. currentmodule:: ansys.meshing.prime

.. autoclass:: SurfaceUtilities
   
   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      
      SurfaceUtilities.add_thickness
      SurfaceUtilities.copy_face_zonelets
      SurfaceUtilities.create_boi
      SurfaceUtilities.create_cap_on_face_zonelets
      SurfaceUtilities.create_contact_patch
      SurfaceUtilities.delete_unwetted_surfaces
      SurfaceUtilities.fill_holes_at_plane
      SurfaceUtilities.fix_invalid_normal_nodes_of_face_zonelets
      SurfaceUtilities.get_bounding_box_of_zonelets
      SurfaceUtilities.refine_at_contacts
      SurfaceUtilities.resolve_intersections
      SurfaceUtilities.smooth_dihedral_face_nodes
      SurfaceUtilities.stretch_free_boundaries
   
   

   
   
   

.. vale on